# python_labs

./: README.md  README2.md  pyproject.toml
data/: input.txt  report.csv
data/lab08/: students_input.json  students_into_json.json
data/samples/: cities.csv  people.csv
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
src/lab01/: ex1.py  ex2.py  ex3.py  ex4.py  ex5.py
src/lab02/: arrays.py  matrix.py  tuples.py
src/lab03/: README.md  text.py  text_stats.py
src/lab04/: README4.md  io_txt_csv.py  text.py  text_report.py
src/lab05/: README.md  csv_xlsx.py  json_csv.py
src/lab06/: README.md  cli_convert.py  cli_text.py
src/lab08/: __init__.py  example.py  models.py  serialize.py
src/lib/: csv_xlsx.py  json_csv.py  text.py  text_stats1.py
src/lib/lab01/: ex2.py
src/lib/lab02/: arrays.py
tests/: test_json_csv.py  test_text.py
tests/python_labs.egg-info/: PKG-INFO  SOURCES.txt
